test/extern/bradc/classes/extern_subclasses.good
extern_subclasses.chpl:5: error: cannot declare class types as export or extern
extern_subclasses.chpl:9: error: cannot declare class types as export or extern
extern_subclasses.chpl:13: error: cannot declare class types as export or extern
